# metaflags

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in  doxygen_defs.hpp
example/: CMakeLists.txt  custom_help_parameters.cpp  get_as_tuple.cpp  runtime_start_at.cpp  switches.cpp  two_parsers.cpp
include/cynodelic/metaflags/: argument_type.hpp  argument_types_list.hpp  config.hpp  finish_at.hpp  flag.hpp  flag_arguments.hpp  generate_list_of_flags.hpp  get_as_tuple.hpp  help_parameters.hpp  is_switch.hpp  number_of_flag_args.hpp  parser.hpp  parser_parameters.hpp  start_at.hpp
include/cynodelic/metaflags/detail/: arg_value_holder.hpp  call_status_holder.hpp  help_generation_helpers.hpp  is_flag_aliases_naming_valid.hpp  is_in_string_vector.hpp  join_all_parser_flags.hpp  make_flag_aliases_list.hpp  multiple_flag_arg_values_holder.hpp  multiple_flag_getters_maker.hpp  name_of_arg_type.hpp  parser_helper.hpp  parser_runtime_data_holder.hpp  remove_zeroes_from_string.hpp  set_values_from_strings.hpp  string_parsing_helper.hpp
include/cynodelic/metaflags/exceptions/: bad_argument_parsing.hpp
include/cynodelic/metaflags/fwd/: parser_fwd.hpp
include/cynodelic/metaflags/preprocessor/: pp_flag.hpp  pp_flag_arguments.hpp  pp_parser.hpp
include/cynodelic/metaflags/preprocessor/detail/: flag_argument_helpers.hpp  get_argument_helpers.hpp  pp_concat.hpp
test/: argument_type.hpp  argument_types_list.hpp  argv_maker.hpp  different_stored_argument_values.hpp  flag_arguments.hpp  flag_arguments_parsing.hpp  get_as_tuple.hpp  is_switch.hpp  main.cpp  parser_compile_time_finish_at.hpp  parser_compile_time_finish_at_extra_args_in_between.hpp  parser_compile_time_start_at.hpp  parser_default_parameters.hpp  parser_default_parameters_extra_args_in_between.hpp  parser_default_parameters_extra_tail_args.hpp  parser_runtime_finish_at.hpp  parser_runtime_finish_at_extra_args_in_between.hpp  parser_runtime_start_at.hpp
